# rust_blockchain_engine

./: Cargo.toml  Dockerfile  README.md  build-docker.sh  docker-compose.yml  run-validator-1.sh  run-validator-2.sh  run-validator-3.sh  sign_and_submit_transaction.sh  sign_and_submit_transaction_2nd_validator.sh  wallet_2_private_key
bins/: Cargo.toml
diagrams/: proof-of-randomness.txt
docker-bins/: client-print-blockchain.sh  print-validators.sh  sign-and-submit-transaction.sh  validator.sh
engine/: Cargo.toml
engine/src/: blockchain.rs  circuits.rs  client.rs  client_wrappers.rs  configuration.rs  consensus.rs  encryption.rs  engine.rs  lib.rs  model.rs  orchestrator.rs  orchestrator_test.rs  request_handler.rs  request_handlers.rs  response_handlers.rs  runtime.rs  serializer.rs  utils.rs
engine/src/blockchain/: balanced_transaction.rs  block.rs  blockchain.rs  blockchain_test.rs  cbor.rs  signed_balanced_transaction.rs  transaction.rs  transaction_id.rs  transaction_test.rs  utxo.rs  uuid.rs  validator_signature.rs
engine/src/circuits/: transaction_validation.rs
engine/src/consensus/: solution_finder.rs  tests.rs
engine/src/interaction_model/: synchronization.rs
engine/src/model/: block.rs  blockchain.rs  blockchain_impl.rs  blockchain_operations.rs  blockchain_tests.rs  hex_string.rs  mod.rs  model.rs  model_impl.rs  private_key_str.rs  public_key_str.rs  requests.rs  signature.rs  transaction.rs
engine/src/orchestrator/: register_remote_validator.rs  request_handler.rs  validator_spin_up.rs
engine/src/runtime/: configuration.rs  validator_runtime.rs  validator_state.rs
engine/src/wallet/: crypto.rs
protocol/: Cargo.toml
test-data/: root_private_key  root_public_key  validator-1_private_key  validator-1_public_key  validator-2_private_key  validator-2_public_key  validator-3_private_key  (+6 more)
(+10 files in other folders)
