[package]
name = "bins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.151"
protocol = {path="../protocol", version = "*"}
serde_cbor = "0.11.2"
anyhow = "1.0.68"
uuid = {version = "1.2.2", features = ["v4"]}
engine = {path = "../engine"}
clap = {version = "4.0.29", features = ["derive"]}
