[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_cbor = "0.11.2"
serde = {version = "1.0.151", features = ["derive"]}
protocol = {path = "../protocol", version = "*"}
anyhow = "*"
rand = "0.8.5"
num-bigint-dig = "0.8.2"
rsa = "0.7.2"
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
sha2 = { version = "0.10.6", features = ["oid"] }
hex = "0.4.3"
uuid = "1.2.2"